CSPACE-4744: Fixing date repeatable styling. Stretching tables to 100% inside of other tables. Stretching termLists to 100% in table cells.

--- a/src/main/webapp/defaults/css/repeatable.css
+++ b/src/main/webapp/defaults/css/repeatable.css
@@ -234,10 +234,6 @@ div.info-pair-date li.cs-repeatable-repeat {
     margin-bottom: 1px;
 }
 
-div.info-pair-date input.cs-repeatable-add {
-    right: 38px;
-}
-
 .infoDiv .info-column {
     margin-bottom: 18px;
 }
